Updated margin spacing to fix margin collapsing

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
-  margin: 24px 0;
-
+  margin-bottom: 48px;
+  overflow: hidden;
+  
   div.row {
     display: flex;
     justify-content: space-between;
