--- a/src/scss/components/_main-header.scss
+++ b/src/scss/components/_main-header.scss
@@ -1,7 +1,7 @@
 .main-header {
   background-color: #EDDFD1;
   padding: 32px 0;
-  margin-bottom: 32px;
+  margin-bottom: 54px;
 
   & .row {
     display: flex;
